--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <link rel="stylesheet" href="./pages/index.css">
     <title>Mesto</title>
   </head>
-  <body>
+  <body class="page page__header">
+    <header class="header">
+      <img src="./images/logo.png" alt="Логотип сайта Место" class="header__logo">
+    </header>
   </body>
 </html>
 
