feat: добавить profile

--- a/index.html
+++ b/index.html
@@ -6,10 +6,21 @@
     <link rel="stylesheet" href="./pages/index.css">
     <title>Mesto</title>
   </head>
-  <body class="page page__header">
-    <header class="header">
+  <body class="page">
+    <header class="header page__header">
       <img src="./images/logo.png" alt="Логотип сайта Место" class="header__logo">
     </header>
+    <main class="main">
+      <div class="profile page__profile">
+        <img src="./images/avatar.jpg" alt="Аватар пользователя" class="profile__avatar">
+        <div class="profile__info">
+          <p class="profile__name">Жак-Ив Кусто</p>
+          <button class="profile__edit-btn"></button>
+          <p class="profile__status">Исследователь океана</p>
+        </div>
+        <button class="profile__add-btn"></button>
+      </div>
+    </main>
   </body>
 </html>
 
