feat: добавить places

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <img src="./images/logo.png" alt="Логотип сайта Место" class="header__logo">
     </header>
     <main class="main">
-      <div class="profile page__profile">
+      <section class="profile page__profile">
         <img src="./images/avatar.jpg" alt="Аватар пользователя" class="profile__avatar">
         <div class="profile__info">
           <p class="profile__name">Жак-Ив Кусто</p>
@@ -19,7 +19,65 @@
           <p class="profile__status">Исследователь океана</p>
         </div>
         <button class="profile__add-btn"></button>
-      </div>
+      </section>
+      <section class="places page__places">
+        <ul class="places__list">
+          <li>
+            <figure class="places__card">
+              <img src="./images/karachaevsk.jpg" alt="Карачаевск" class="places__photo">
+              <figcaption class="places__caption">
+                <p class="places__name">Карачаевск</p>
+                <button class="places__like-btn"></button>
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure class="places__card">
+              <img src="./images/elbrus.jpg" alt="Карачаевск" class="places__photo">
+              <figcaption class="places__caption">
+                <p class="places__name">Гора Эльбрус</p>
+                <button class="places__like-btn"></button>
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure class="places__card">
+              <img src="./images/dombai.jpg" alt="Карачаевск" class="places__photo">
+              <figcaption class="places__caption">
+                <p class="places__name">Домбай</p>
+                <button class="places__like-btn"></button>
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure class="places__card">
+              <img src="./images/elbrus.jpg" alt="Карачаевск" class="places__photo">
+              <figcaption class="places__caption">
+                <p class="places__name">Гора Эльбрус</p>
+                <button class="places__like-btn"></button>
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure class="places__card">
+              <img src="./images/dombai.jpg" alt="Карачаевск" class="places__photo">
+              <figcaption class="places__caption">
+                <p class="places__name">Домбай</p>
+                <button class="places__like-btn"></button>
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure class="places__card">
+              <img src="./images/karachaevsk.jpg" alt="Карачаевск" class="places__photo">
+              <figcaption class="places__caption">
+                <p class="places__name">Карачаево-Черкесия</p>
+                <button class="places__like-btn"></button>
+              </figcaption>
+            </figure>
+          </li>
+        </ul>
+      </section>
     </main>
   </body>
 </html>
