--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@
         </ul>
       </section>
     </main>
+    <footer class="footer page__footer">
+      <p class="footer__copyright">© 2023 Mesto Russia</p>
+    </footer>
   </body>
 </html>
 
