--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
       <section class="profile page__profile">
         <img src="./images/avatar.jpg" alt="Аватар пользователя" class="profile__avatar">
         <div class="profile__info">
-          <p class="profile__name">Жак-Ив Кусто</p>
-          <button class="profile__edit-btn"></button>
+          <div class="profile__name-row">
+            <p class="profile__name">Жак-Ив Кусто</p>
+            <button class="profile__edit-btn"></button>
+          </div>
           <p class="profile__status">Исследователь океана</p>
         </div>
         <button class="profile__add-btn"></button>
