feat: добавить pop-up

--- a/index.html
+++ b/index.html
@@ -84,6 +84,15 @@
     <footer class="footer page__footer">
       <p class="footer__copyright">© 2023 Mesto Russia</p>
     </footer>
+    <section class="popup">
+      <form action="" class="popup__form">
+        <p class="popup__text">Редактировать профиль</p>
+        <input type="text" id="popup__full-name" name="popup__full-name" class="popup__full-name" value="Жак-Ив Кусто">
+        <input type="text" id="popup__status" name="popup__status" class="popup__status" value="Исследователь океана">
+        <input type="submit" value="Сохранить" class="popup__submit-btn">
+        <button class="popup__close-btn"></button>
+      </form>
+    </section>
   </body>
 </html>
 
