feat: добавить js

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           </li>
           <li>
             <figure class="places__card">
-              <img src="./images/elbrus.jpg" alt="Карачаевск" class="places__photo">
+              <img src="./images/elbrus.jpg" alt="Эльбрус" class="places__photo">
               <figcaption class="places__caption">
                 <p class="places__name">Гора Эльбрус</p>
                 <button class="places__like-btn"></button>
@@ -44,7 +44,7 @@
           </li>
           <li>
             <figure class="places__card">
-              <img src="./images/dombai.jpg" alt="Карачаевск" class="places__photo">
+              <img src="./images/dombai.jpg" alt="Домбай" class="places__photo">
               <figcaption class="places__caption">
                 <p class="places__name">Домбай</p>
                 <button class="places__like-btn"></button>
@@ -53,7 +53,7 @@
           </li>
           <li>
             <figure class="places__card">
-              <img src="./images/elbrus.jpg" alt="Карачаевск" class="places__photo">
+              <img src="./images/elbrus.jpg" alt="Эльбрус" class="places__photo">
               <figcaption class="places__caption">
                 <p class="places__name">Гора Эльбрус</p>
                 <button class="places__like-btn"></button>
@@ -62,7 +62,7 @@
           </li>
           <li>
             <figure class="places__card">
-              <img src="./images/dombai.jpg" alt="Карачаевск" class="places__photo">
+              <img src="./images/dombai.jpg" alt="Домбай" class="places__photo">
               <figcaption class="places__caption">
                 <p class="places__name">Домбай</p>
                 <button class="places__like-btn"></button>
@@ -93,6 +93,7 @@
         <button class="popup__close-btn"></button>
       </form>
     </section>
+    <script src="./script.js"></script>
   </body>
 </html>
 
