--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
       </section>
       <section class="places page__places">
         <ul class="places__list">
-          <li>
+          <li class="places__list-item">
             <figure class="places__card">
+              <button class="places__delete-btn" aria-label="Удалить"></button>
               <img src="./images/karachaevsk.jpg" alt="Карачаевск" class="places__photo">
               <figcaption class="places__caption">
                 <h2 class="places__name">Карачаевск</h2>
@@ -33,8 +34,9 @@
               </figcaption>
             </figure>
           </li>
-          <li>
+          <li class="places__list-item">
             <figure class="places__card">
+              <button class="places__delete-btn" aria-label="Удалить"></button>
               <img src="./images/elbrus.jpg" alt="Эльбрус" class="places__photo">
               <figcaption class="places__caption">
                 <h2 class="places__name">Гора Эльбрус</h2>
@@ -42,8 +44,9 @@
               </figcaption>
             </figure>
           </li>
-          <li>
+          <li class="places__list-item">
             <figure class="places__card">
+              <button class="places__delete-btn" aria-label="Удалить"></button>
               <img src="./images/dombai.jpg" alt="Домбай" class="places__photo">
               <figcaption class="places__caption">
                 <h2 class="places__name">Домбай</h2>
@@ -51,8 +54,9 @@
               </figcaption>
             </figure>
           </li>
-          <li>
+          <li class="places__list-item">
             <figure class="places__card">
+              <button class="places__delete-btn" aria-label="Удалить"></button>
               <img src="./images/elbrus.jpg" alt="Эльбрус" class="places__photo">
               <figcaption class="places__caption">
                 <h2 class="places__name">Гора Эльбрус</h2>
@@ -60,8 +64,9 @@
               </figcaption>
             </figure>
           </li>
-          <li>
+          <li class="places__list-item">
             <figure class="places__card">
+              <button class="places__delete-btn" aria-label="Удалить"></button>
               <img src="./images/dombai.jpg" alt="Домбай" class="places__photo">
               <figcaption class="places__caption">
                 <h2 class="places__name">Домбай</h2>
@@ -69,8 +74,9 @@
               </figcaption>
             </figure>
           </li>
-          <li>
+          <li class="places__list-item">
             <figure class="places__card">
+              <button class="places__delete-btn" aria-label="Удалить"></button>
               <img src="./images/karachaevsk.jpg" alt="Карачаевск" class="places__photo">
               <figcaption class="places__caption">
                 <h2 class="places__name">Карачаево-Черкесия</h2>
