feat: добавить попап картинки

--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
             </li>
           </template>
         </ul>
+        <div class="image-popup image-popup_hidden">
+          <figure class="image-popup__figure">
+            <img src="" alt="" class="image-popup__photo">
+            <figcaption class="image-popup__caption"></figcaption>
+            <button class="image-popup__close-btn" aria-label="Удалить"></button>
+          </figure>
+        </div>
       </section>
     </main>
     <footer class="footer page__footer">
