--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <li class="places__list-item">
               <figure class="places__card">
                 <button class="places__delete-btn" aria-label="Удалить"></button>
-                <img src="" alt="" class="places__photo">
+                <img src="./images/elbrus.jpg" alt="Эльбрус" class="places__photo">
                 <figcaption class="places__caption">
                   <h2 class="places__name"></h2>
                   <button class="places__like-btn" aria-label="Лайк"></button>
@@ -39,7 +39,7 @@
         </ul>
         <div class="image-popup image-popup_hidden">
           <figure class="image-popup__figure">
-            <img src="" alt="" class="image-popup__photo">
+            <img src="./images/elbrus.jpg" alt="Эльбрус" class="image-popup__photo">
             <figcaption class="image-popup__caption"></figcaption>
             <button class="image-popup__close-btn" aria-label="Удалить"></button>
           </figure>
