feat: добавить классы card и formvalidator

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <input type="text" id="status" name="popup__input_type_status" class="popup__input popup__input_type_status" value="Исследователь океана" placeholder="О себе" aria-label="О себе" required minlength="2" maxlength="200">
         <p class="popup__input-error popup__input-error_type_status">Ошибка</p>
         <input type="submit" value="Сохранить" class="popup__submit-btn popup__submit-btn_type_edit-profile" aria-label="Сохранить">
-        <button class="popup__close-btn" aria-label="Закрыть"></button>
+        <button type="button" class="popup__close-btn" aria-label="Закрыть"></button>
       </form>
     </section>
     <section class="popup popup_type_add-place">
@@ -68,12 +68,11 @@
         <input type="url" id="src" name="popup__input_type_src" class="popup__input popup__input_type_src" placeholder="Ссылка на картинку" aria-label="Ссылка" required>
         <p class="popup__input-error popup__input-error_type_src">Ошибка</p>
         <input type="submit" value="Создать" class="popup__submit-btn popup__submit-btn_type_add-place" aria-label="Создать">
-        <button class="popup__close-btn" aria-label="Закрыть"></button>
+        <button type="button" class="popup__close-btn" aria-label="Закрыть"></button>
       </form>
     </section>
     <script src="./script/cards.js"></script>
-    <script src="./script/script.js"></script>
-    <script src="./script/validate.js"></script>
+    <script type="module" src="./script/script.js"></script>
   </body>
 </html>
 
