--- a/index.html
+++ b/index.html
@@ -24,18 +24,6 @@
       </section>
       <section class="places page__places">
         <ul class="places__list">
-          <template class="places__list-item-template">
-            <li class="places__list-item">
-              <figure class="places__card">
-                <button class="places__delete-btn" aria-label="Удалить"></button>
-                <img src="./images/elbrus.jpg" alt="Эльбрус" class="places__photo">
-                <figcaption class="places__caption">
-                  <h2 class="places__name"></h2>
-                  <button class="places__like-btn" aria-label="Лайк"></button>
-                </figcaption>
-              </figure>
-            </li>
-          </template>
         </ul>
         <section class="popup popup_type_image">
           <figure class="popup__figure">
@@ -71,6 +59,18 @@
         <button type="button" class="popup__close-btn" aria-label="Закрыть"></button>
       </form>
     </section>
+    <template class="card-template">
+      <li class="card">
+        <figure class="card__figure">
+          <button class="card__delete-btn" aria-label="Удалить"></button>
+          <img src="./images/elbrus.jpg" alt="Эльбрус" class="card__photo">
+          <figcaption class="card__caption">
+            <h2 class="card__name"></h2>
+            <button class="card__like-btn" aria-label="Лайк"></button>
+          </figcaption>
+        </figure>
+      </li>
+    </template>
     <script src="./script/cards.js"></script>
     <script type="module" src="./script/script.js"></script>
   </body>
